--- a/proj-html-vuejs/package.json
+++ b/proj-html-vuejs/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
